force-app/main/default/objects/OrderItem/fields/Base_Price__c.field-meta.xml
<CustomField>
    <fullName>Base_Price__c</fullName>
    <description>Base Price * Sales Multiplier</description>
    <label>Base Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>