force-app/main/default/objects/OrderItem/fields/Cost_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Cost_Multiplier__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Cost Multiplier</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>