force-app/main/default/objects/OrderItem/fields/fxCost__c.field-meta.xml
<CustomField>
    <fullName>fxCost__c</fullName>
    <description>Calculated Result of Base Price * Cost Multiplier * Quantity</description>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>