force-app/main/default/objects/OrderItem/fields/fxDiscount__c.field-meta.xml
<CustomField>
    <fullName>fxDiscount__c</fullName>
    <label>Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>