force-app/main/default/objects/OrderItem/fields/fxFactory__c.field-meta.xml
<CustomField>
    <fullName>fxFactory__c</fullName>
    <label>Factory</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>