force-app/main/default/objects/OrderItem/fields/fxSales__c.field-meta.xml
<CustomField>
    <fullName>fxSales__c</fullName>
    <label>Sales</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>