force-app/main/default/objects/OrderItem/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <description>First Level Grouping of Products and Services</description>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Product_Categories</valueSetName>
    </valueSet>
</CustomField>