force-app/main/default/objects/OrderItem/fields/Product_Item__c.field-meta.xml
<CustomField>
    <fullName>Product_Item__c</fullName>
    <description>Third Level Grouping of Products and Services</description>
    <label>Product Item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Product_Items</valueSetName>
    </valueSet>
</CustomField>