force-app/main/default/objects/OrderItem/fields/RVN__c.field-meta.xml
<CustomField>
    <fullName>RVN__c</fullName>
    <description>Autogenerated RVN for all Plan Types retrieved from QuoteLineItem</description>
    <formula>QuoteLineItem.RVN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RVN</label>
    <type>Text</type>
</CustomField>