force-app/main/default/objects/OrderItem/fields/Sales_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Code__c</fullName>
    <label>Sales Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>